--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ facebook/doc/
 facebook/lint.xml
 facebook/tests/lint.xml
 facebook/tests/assets/config.json
+facebook/target
 .idea/workspace.xml
 .idea/dictionaries/
 .idea/inspectionProfiles/
